main / detail layanan page done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,12 @@
   color: transparent;
   animation: gradient 5s ease infinite;
 }
+
+ol {
+  list-style-type: decimal;
+  padding-left: 20px;
+}
+
+li {
+  margin-bottom: 5px;
+}
